Minor edits and Icon making.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TextActivity" />
+        <activity
+            android:name=".TextActivity"/>
         <activity
             android:name=".TypingActivity"
             android:label="@string/title_activity_typing"
